syntax = "proto3";
option go_package = "ws_grpc_redis_scylla/";

service Order {
  rpc CreateOrder(OrderData) returns (Error) {}
  rpc GetOrderByID(Id) returns (OrderDataResponse) {}
  rpc UpdateOrderByID(OrderDataUpdate) returns (Error) {}
  rpc DeleteOrderByID(Id) returns (Error) {}
}

message Id{
  uint32 id = 1;
}
enum OrderStatus {
  in_process = 0;
  delivered = 1;
  canceled = 2;
}
message OrderData {
  Id id = 1;
  float Sum = 2;
  Id user_id = 3;
  OrderStatus status = 4;
}

message OrderDataResponse {
  Id id = 1;
  OrderData data = 2;
}
message OrderDataUpdate {
  Id id = 1;
  OrderData data = 2;
}
message Error {
  string error = 1;
}